<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btn_add_to_fav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp">

        <ImageView
            android:id="@+id/ivFav"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:padding="@dimen/_1sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fav"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/fav_unfav_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_toEndOf="@+id/ivFav"
            android:hint="@string/username"
            android:text="@string/add_to_favourites"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/btn_not_insterested"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/gainsboro" />

        <ImageView
            android:id="@+id/ivInterest"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_not_insterted"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_toEndOf="@+id/ivInterest"
            android:hint="@string/username"
            android:text="@string/not_insterested"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/gainsboro" />


        <ImageView
            android:id="@+id/ivReport"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_report"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_toEndOf="@+id/ivReport"
            android:hint="@string/username"
            android:text="@string/report"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/gainsboro" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:padding="@dimen/_1sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_toEndOf="@+id/ivDelete"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>


</LinearLayout>