<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ActivitesFragment.VideoActionF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/d_round_top_corners_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sendTo_txt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center"
                        android:text="@string/send_to"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        android:visibility="gone" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recylerview_following"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_6sdp"
                        android:visibility="gone" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center"
                        android:text="@string/share_to"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recylerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_6sdp" />

                </LinearLayout>


                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerInParent="true"
                    android:theme="@style/Progressbar_style" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gainsboro" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp">

                    <LinearLayout
                        android:id="@+id/save_video_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_save_round" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="center"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/save_video"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/copy_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_copy_clipboard" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/copy_link"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/delete_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_delete" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="center"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/delete_video"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/duet_layout"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_duet" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/duet"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/privacy_setting_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_video_privacy" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="center"
                            android:text="@string/privacy_setting_nl"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/add_favourite_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_round_favourite" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="center"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/add_favourite_nl"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/not_intrested_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_round_not_insterted" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="center"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/not_interested_nl"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/report_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_round_report" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="center"
                            android:maxWidth="@dimen/_45sdp"
                            android:maxLines="2"
                            android:text="@string/report"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>


                </LinearLayout>

            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/gainsboro" />

            <TextView

                android:id="@+id/bottom_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/cancel_"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>